--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,6 +19,9 @@
       padding-top: 5px;
     }
 
+h1 {
+align: center;
+}
     img {
       padding: 5px;
     }
@@ -52,12 +55,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
 <header>
-    <figure><img src="images/RCLibrary.jpg" width="100%" margin="10px" alt="Rebecca Crown Library Staircase"></figure>
+    <figure><img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase"></figure>
 
-    <h1 align="center">Rebecca Crown Library 3D Printing Services</h1>
+    <h1>Rebecca Crown Library 3D Printing Services</h1>
 </header>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index.html" title="home">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -65,16 +68,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="tutorial.html">Tutorial</a>
+            <a class="nav-link" href="tutorial.html" title="tutorial">Tutorial</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="faq.html" title="faq">FAQ</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="makeanappointment.html">Make an Appointment</a>
+            <a class="nav-link" href="makeanappointment.html" title="make appt">Make an Appointment</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="faculty.html">For Faculty</a>
+            <a class="nav-link" href="faculty.html" title="faculty">For Faculty</a>
           </li>
         </ul>
       </div>
@@ -91,11 +94,11 @@
         <h2>Gallery</h2>
         <div class="container" style="background-color: #F65A35">
           <p>
-            Here are some current projects from courses offered in Spring Semester.
+            Here are some current projects from courses offered at Dominican University.
           </p>
-          <img src="http://via.placeholder.com/200x100">
+          <figure><img src="http://via.placeholder.com/200x100" alt="example 1"></figure>
           <br>
-          <img src="http://via.placeholder.com/200x100">
+          <figure><img src="http://via.placeholder.com/200x100" alt="example 2"></figure>
 
         </div>
       </div>
@@ -106,7 +109,7 @@
       <div class="row" id="footer">
         <div class="col-sm-4">
           <a>
-            <img src="images/DomLogo.jpg" style="width: 200px">
+            <figure><img src="images/DomLogo.jpg" alt="Dominican shield logo" style="width: 200px;"></figure>
           </a>
         </div>
 
@@ -128,7 +131,7 @@
             <br /> Sun: 10am-7pm</p>
         </div>
 <div>
-  <p align="center">Copyright 2018 LIS786 April Hummons, Danielle Oakes, Karla Alba, Katherine D'Antico</p>
+  <p>Copyright 2018 LIS786 April Hummons, Danielle Oakes, Karla Alba, Katherine D'Antico under the instruction of Brodie Austin</p>
 </div>
       </div>
     </div>
