--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -55,7 +55,7 @@ align: center;
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
 <header>
-    <figure><img src="images/RCLibrary.jpg?noresize" alt="Rebecca Crown Library Staircase"></figure>
+    <figure><img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase" width="100%"></figure>
 
     <h1>Rebecca Crown Library 3D Printing Services</h1>
 </header>
