--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -96,9 +96,9 @@ text-align: center;
           <p>
             Here are some current projects from courses offered at Dominican University.
           </p>
-          <figure><img src="http://via.placeholder.com/200x100" alt="example 1"></figure>
+          <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" width="200"></figure>
           <br>
-          <figure><img src="http://via.placeholder.com/200x100" alt="example 2"></figure>
+          <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" width="200" class="rotateimg190"></figure>
 
         </div>
       </div>
