--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,6 +34,14 @@ text-align: center;
     #main {
       margin: 0 auto;
     }
+    
+    .rotateimg90 {
+  -webkit-transform:rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
   </style>
 
   <!-- Bootstrap CSS -->
