--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,6 +25,10 @@ text-align: center;
     img {
       padding: 5px;
     }
+    
+    td {
+     align: center;
+    }
 
     #footer {
       padding: 20px;
