--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -97,7 +97,7 @@ text-align: center;
 
 <main>
     <div class="row">
-      <div class="col-md-8" style="padding: 20px">
+      <div class="col-md-8" style="padding: 20px; word-wrap: break-word; overflow:hidden;">
 
 {{content}}
               </div>
