--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,6 +29,10 @@ text-align: center;
     td {
      align: center;
     }
+    
+    .thumbnail {
+    width: 60%;
+    }
 
     #footer {
       padding: 20px;
