--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,9 +19,10 @@
       padding-top: 5px;
     }
 
-h1 {
-text-align: center;
-}
+    h1 {
+      text-align: center;
+    }
+    
     img {
       padding: 5px;
     }
@@ -32,6 +33,7 @@ text-align: center;
     
     .thumbnail {
     width: 60%;
+    align: center;
     }
 
     #footer {
