Added thumbnail border color and width

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,6 +34,8 @@
     .thumbnail {
     width: 60%;
     align: center;
+    border-color: rgb(217, 217, 217);
+    border-width: 1px;
     }
 
     #footer {
