Changed thumbnail text align

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
     
     .thumbnail {
     width: 60%;
-    align: center;
+    text-align: center;
     border-color: rgb(217, 217, 217);
     border-width: 1px;
     }
