Added thumbnail css

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,6 +30,11 @@
     td {
      align: center;
     }
+    
+    .thumbnail {
+    width: 60%;
+    text-align: center;
+    }
 
     #footer {
       padding: 20px;
