Added text-align element

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,12 +27,9 @@
       padding: 5px;
     }
     
-    td {
-     align: center;
-    }
-    
     .thumbnail {
     width: 60%;
+    text-align: center;
     }
 
     #footer {
