--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,8 @@
     
     .thumbnail {
     width: 60%;
-    text-align: auto;
+    margin-left: auto;
+    margin-right: auto;
     }
 
     #footer {
