--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,9 +28,8 @@
     }
     
     .thumbnail {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    text-align: center;
     }
 
     #footer {
