--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,6 +27,10 @@
       padding: 5px;
     }
     
+    figure {
+     margin: 20px; 
+    }
+    
     .thumbnail {
     width: 100%;
     text-align: center;
