Add figure margin percentages

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,10 @@
     }
     
     figure {
-     margin: 20px 5%; 
+     margin-top: 5%;
+     margin-bottom: 5%;
+     margin-left: 5%;
+     margin-right: 5%;
     }
     
     .thumbnail {
