Add carousel caption CSS

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,6 +38,10 @@
     width: 100%;
     text-align: center;
     }
+    
+    .carousel-caption {
+     background: rgb(204, 204, 204, .8) 
+    }
 
     #footer {
       padding: 20px;
