--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,6 +39,10 @@
     text-align: center;
     }
     
+    .carousel {
+     height: 300px; 
+    }
+    
     .carousel-caption {
      background: rgb(115, 115, 115, .8) 
     }
