--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,6 +27,10 @@
       padding: 5px;
     }
     
+    #car_img {
+      height: 300px;
+    }
+    
     figure {
      margin-top: 5%;
      margin-bottom: 5%;
