--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,10 +29,7 @@
     
     figure {
      float: right;
-     margin-top: 5%;
-     margin-bottom: 5%;
-     margin-left: 5%;
-     margin-right: 5%;
+     margin: 10%;
     }
     
     .thumbnail {
