--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,9 @@
     
     figure {
      float: right;
-     margin: 20px 10%;
+     margin: 10%;
+     margin-left: 10%;
+     margin-right: 10%;
     }
     
     .thumbnail {
