--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -108,14 +108,16 @@
 
 <main>
     <div class="row">
+      <section>
       <div class="col-md-8" style="padding: 20px; word-wrap:break-word;">
 
 {{content}}
-              </div>
-
+      </div>
+      </section>
+      <aside>
       <div class="col-sm-4" style="padding: 20px">
         <h2>Gallery</h2>
-        <div class="container" style="background-color: #F65A35">
+          <div class="container" style="background-color: #F65A35">
           <p>
             Here are some current projects from courses offered at Dominican University.
           </p>
@@ -123,8 +125,9 @@
           <br>
           <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" width="300" class="rotateimg190"></figure>
 
-        </div>
-      </div>
+          </div>
+       </div>
+       </aside>
     </div>
 </main>
 <footer>
