--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,7 +38,15 @@
     }
     
     .carousel-caption {
-     background: rgb(115, 115, 115, .8) 
+     background: rgb(115, 115, 115);
+      
+    position: relative;
+    display: none;
+    -webkit-transition: 0.8s ease-in-out left;
+    -moz-transition: 0.8s ease-in-out left;
+    -o-transition: 0.8s ease-in-out left;
+    transition: 0.8s ease-in-out left;
+} 
     }
 
     #footer {
