--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -46,7 +46,6 @@
     -moz-transition: 0.8s ease-in-out left;
     -o-transition: 0.8s ease-in-out left;
     transition: 0.8s ease-in-out left;
-} 
     }
 
     #footer {
@@ -114,16 +113,13 @@
       </div>
 </nav>
 
-<main>
-    <div class="row">
-      <section>
-      <div class="col-md-8" style="padding: 20px; word-wrap:break-word;">
+<main class="row">
+      <section class="col-md-8" style="padding: 20px; word-wrap:break-word;">
 
 {{content}}
-      </div>
+        
       </section>
-      <aside>
-      <div class="col-sm-4" style="padding: 20px">
+      <aside class="col-sm-4" style="padding: 20px">
         <h2>Gallery</h2>
           <div class="container" style="background-color: #F65A35">
           <p>
@@ -134,12 +130,9 @@
           <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" width="300" class="rotateimg190"></figure>
 
           </div>
-       </div>
        </aside>
-    </div>
 </main>
-<footer>
-    <div class="container-fluid" style="background-color: #17264D">
+<footer class="container-fluid" style="background-color: #17264D">
       <div class="row" id="footer">
         <div class="col-sm-4">
           <a>
@@ -168,7 +161,6 @@
   <p>Copyright 2018 LIS786 April Hummons, Danielle Oakes, Karla Alba, Katherine D'Antico under the instruction of Brodie Austin</p>
 </div>
       </div>
-    </div>
   </footer>
   </div>
 </body>
