--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -70,6 +70,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
+  <!-- a helper script for vaidating the form on the appointment page-->
+<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
+
+  
   <title>3D Printing @ the Rebecca Crown Library</title>
 </head>
 
