--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -71,7 +71,7 @@
     crossorigin="anonymous">
 
   <!-- a helper script for vaidating the form on the appointment page-->
-<script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
+<script src="scripts/gen_validatorv31.js"></script>
 
   
   <title>3D Printing @ the Rebecca Crown Library</title>
