--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -84,6 +84,10 @@
       crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
+    <!-- Script for form validation -->
+    <script src="https://domlis786.github.io/groupb-wk14/scripts/gen_validatorv31.js"></script>
+
+    
 <header>
     <figure><img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase" width="100%"></figure>
 
