corrected spelling on new class

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -129,9 +129,9 @@
           <p>
             Here are some current projects from courses offered at Dominican University.
           </p>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" class="fixedwidth">
+          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" class="fixedsize">
           <br>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" class="fixedwidth">
+          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" class="fixedsize">
           </div>
     </aside>
 </main>
@@ -140,7 +140,7 @@
       <div class="row" id="footer">
         <div class="col-sm-4">
           <a href="http://www.dom.edu" title="dominicanwebsite">
-            <img src="images/DomLogo.jpg" alt="Dominican shield logo" class="fixedwidth">
+            <img src="images/DomLogo.jpg" alt="Dominican shield logo" class="fixedsize">
           </a>
         </div>
         <div class="col-sm-4">
