update banner image to existing class from bootstrap css

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -37,7 +37,6 @@
 
     .carousel-caption {
      background: rgb(115, 115, 115);
-
     position: relative;
     display: none;
     -webkit-transition: 0.8s ease-in-out left;
@@ -91,7 +90,7 @@
 
 
 <header>
-    <img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase">
+    <img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
     <h1>Rebecca Crown Library 3D Printing Services</h1>
 </header>
 
