--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -58,6 +58,10 @@
       width: 200px;
     }
 
+    .fixedheight{
+      height:250px;
+    }
+
     .rotateimg90 {
   -webkit-transform:rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -90,8 +94,7 @@
 
 
 <header>
-    <img src="images/RCLibrary.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
-    <h1>Rebecca Crown Library 3D Printing Services</h1>
+    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
@@ -120,7 +123,8 @@
 
 <main class="row">
     <section class="col-md-8" style="padding: 20px; word-wrap:break-word;">
-{{content}}
+    <h1>{{page.title}}</h1>
+    {{content}}
       </section>
       <aside class="col-sm-4" style="padding: 20px">
         <h2>Gallery</h2>
