--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -94,7 +94,7 @@
 
 
 <header>
-    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
+    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
