--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,6 +22,10 @@
       text-align: center;
     }
 
+    img{
+      padding:5px;
+    }
+    
     .mood {
      float: right;
      margin: 4%;
@@ -90,7 +94,7 @@
 
 
 <header>
-    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container">
+    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
