--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,7 +25,11 @@
     img{
       padding:5px;
     }
-    
+
+    .container-banner {
+        margin-right: auto;
+        margin-left: auto;
+
     .mood {
      float: right;
      margin: 4%;
@@ -94,7 +98,7 @@
 
 
 <header>
-    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-fluid">
+    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-banner">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
