--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -135,9 +135,9 @@
           <p>
             Here are some current projects from courses offered at Dominican University.
           </p>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" class="fixedsize">
+          <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" class="fixedsize"></figure>
           <br>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" class="fixedsize">
+          <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" class="fixedsize"></figure>
           </div>
     </aside>
 </main>
