--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,8 +27,10 @@
     }
 
     .container-banner {
-        margin-right: auto;
-        margin-left: auto;
+      padding-right: 15px;
+      padding-left: 15px;
+      margin-right: auto;
+      margin-left: auto;
       }
 
     .mood {
