moved class from image to header

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,6 @@
 
     .container-banner {
       padding-right: 15px;
-      padding-left: 15px;
       margin-right: auto;
       margin-left: auto;
       }
@@ -100,8 +99,8 @@
     <script src="https://domlis786.github.io/groupb-wk14/scripts/gen_validatorv31.js"></script>
 
 
-<header>
-    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase" class="container-banner">
+<header class="container-banner">
+    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
