added overflow to banner container class

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,6 +30,8 @@
       padding-right: 15px;
       margin-right: auto;
       margin-left: auto;
+      height:auto;
+      overflow:auto;
       }
 
     .mood {
