changed overflow to width to get rid of scrollbar

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,7 +31,7 @@
       margin-right: auto;
       margin-left: auto;
       height:auto;
-      overflow:auto;
+      width:auto;
       }
 
     .mood {
