playing with inherit properties in image

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,15 +24,14 @@
 
     img{
       padding:5px;
-      width:auto;
+      width:inherit;
     }
 
     .container-banner {
       padding-right: 15px;
       margin-right: auto;
       margin-left: auto;
-      height:auto;
-      width:auto;
+      max-width: 690px;
       }
 
     .mood {
