--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,10 +28,15 @@
     }
 
     .container-banner {
-      padding-right: 15px;
       margin-right: auto;
       margin-left: auto;
       max-width: 1365px;
+      }
+
+      .container-gallery {
+        margin-right: auto;
+        margin-left: auto;
+        max-width:1140px;
       }
 
     .mood {
@@ -135,13 +140,13 @@
       </section>
       <aside class="col-sm-4" style="padding: 20px">
         <h2>Gallery</h2>
-          <div class="container" style="background-color: #F65A35">
+          <div class="container container-gallery" style="background-color: #F65A35">
           <p>
             Here are some current projects from courses offered at Dominican University.
           </p>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1" class="fixedsize">
+          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/Rex.JPG" alt="example 1">
           <br>
-          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2" class="fixedsize">
+          <img src="https://libapps.s3.amazonaws.com/accounts/13369/images/joffcrown.JPG" alt="example 2">
           </div>
     </aside>
 </main>
