--- a/_includes/design_previews.html
+++ b/_includes/design_previews.html
@@ -1,5 +1,5 @@
 {% for design in site.designs %}
-  <h3>{{ design.title }}</h3>
+  <h4>{{ design.title }}</h4>
   <p>{{ design.summary }}</p>
-  <a href="{{ design.url }}">Learn more</a>
+  <a href="groupb-wk14/{{ design.url }}">Learn more</a>
 {% endfor %}
