update design previews url

--- a/_includes/design_previews.html
+++ b/_includes/design_previews.html
@@ -1,5 +1,5 @@
 {% for design in site.designs %}
   <h4>{{ design.title }}</h4>
   <p>{{ design.summary }}</p>
-  <a href="groupb-wk14{{ design.url }}">Learn more</a>
+  <a href=" {{ design.url }}">Learn more</a>
 {% endfor %}
