updated image tags in carousel of design progress page and in base layout

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -107,7 +107,7 @@
 
 
 <header class="container-banner">
-    <img src="images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase">
+    <img src="https://domlis786.github.io/groupb-wk14/images/RCLibrary2.jpg" alt="Rebecca Crown Library Staircase">
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
@@ -155,7 +155,7 @@
       <div class="row" id="footer">
         <div class="col-sm-4">
           <a href="http://www.dom.edu" title="dominicanwebsite">
-            <img src="images/DomLogo.jpg" alt="Dominican shield logo" class="fixedsize">
+            <img src="https://domlis786.github.io/groupb-wk14/images/DomLogo.jpg" alt="Dominican shield logo" class="fixedsize">
           </a>
         </div>
         <div class="col-sm-4">
