--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -128,7 +128,7 @@
             <a class="nav-link" href="makeanappointment.html" title="make appt">Make an Appointment</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="faculty.html" title="faculty">For Faculty</a>
+            <a class="nav-link" href="/groupb-wk14/faculty.html" title="faculty">For Faculty</a>
           </li>
         </ul>
       </div>
