--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -119,13 +119,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="tutorial.html" title="tutorial">Tutorial</a>
+            <a class="nav-link" href="/groupb-wk14/tutorial.html" title="tutorial">Tutorial</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="faq.html" title="faq">FAQ</a>
+            <a class="nav-link" href="/groupb-wk14/faq.html" title="faq">FAQ</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="makeanappointment.html" title="make appt">Make an Appointment</a>
+            <a class="nav-link" href="/groupb-wk14/makeanappointment.html" title="make appt">Make an Appointment</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/groupb-wk14/faculty.html" title="faculty">For Faculty</a>
