--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -111,7 +111,7 @@
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
-      <a class="navbar-brand" href="index.html" title="home">Home</a>
+      <a class="navbar-brand" href="/groupb-wk14/index.html" title="home">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
