update all nav links url to include site.baseurl

--- a/_includes/design_previews.html
+++ b/_includes/design_previews.html
@@ -1,5 +1,5 @@
 {% for design in site.designs %}
 <ul>
-  <li><a href="{{base.url}}{{design.url}}" title="design and process page">{{ design.title }}</a></li>
+  <li><a href="{{site.baseurl}}/{{design.url}}" title="design and process page">{{ design.title }}</a></li>
 </ul>
 {% endfor %}
