--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -112,7 +112,7 @@
 </header>
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1E3B6D">
-      <a class="navbar-brand" href="/groupb-wk14/index.html" title="home">Home</a>
+      <a class="navbar-brand" href="{{site.baseurl}}/index.html" title="home">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -120,16 +120,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/groupb-wk14/tutorial.html" title="tutorial">Tutorial</a>
+            <a class="nav-link" href="{{site.baseurl}}/tutorial.html" title="tutorial">Tutorial</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/groupb-wk14/faq.html" title="faq">FAQ</a>
+            <a class="nav-link" href="{{site.baseurl}}/faq.html" title="faq">FAQ</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/groupb-wk14/makeanappointment.html" title="make appt">Make an Appointment</a>
+            <a class="nav-link" href="{{site.baseurl}}/makeanappointment.html" title="make appt">Make an Appointment</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/groupb-wk14/faculty.html" title="faculty">For Faculty</a>
+            <a class="nav-link" href="{{site.baseurl}}/faculty.html" title="faculty">For Faculty</a>
           </li>
         </ul>
       </div>
