update all links to include liquid site.baseurl

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -156,7 +156,7 @@
       <div class="row" id="footer">
         <div class="col-sm-4">
           <a href="http://www.dom.edu" title="dominicanwebsite">
-            <img src="https://domlis786.github.io/groupb-wk14/images/DomLogo.jpg" alt="Dominican shield logo" class="fixedsize">
+            <img src="{{site.baseurl}}/images/DomLogo.jpg" alt="Dominican shield logo" class="fixedsize">
           </a>
         </div>
         <div class="col-sm-4">
